# parcer

./: .gitignore  CMakeLists.txt
includes/: iniparcer.h
src/: iniparcer.cpp  main.cpp  test.ini
